Sculpt size pressure corrupts mesh when using a tablet, crash/hang after remesh #72006

Closed
opened 2019-11-28 11:06:10 +01:00 by Floatharr · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.08

Blender Version
Broken: version: 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash: 4659fa5471
Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-21 19:22, hash: f903835370
Worked: version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: 115a5bf65a

Short description of error
After sculpt changes in 2.82, enabling size pressure in sculpt mode corrupts the mesh when sculpting. Attempting a remesh on the corrupted mesh hangs blender.

Exact steps for others to reproduce the error
Factory defaults.

  1. Swap to sculpt tab
  2. Remesh cube
  3. Enable size pressure on clay brush
  4. Sculpt with mouse, no issue.
  5. Sculpt with tablet. Mesh is being destroyed.
  6. Remesh again, blender hangs.

See video below:
ekRyAHdTIP.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.08 **Blender Version** Broken: version: 2.82 (sub 2), branch: master, commit date: 2019-11-27 20:26, hash: `4659fa5471` Broken: version: 2.82 (sub 1), branch: master, commit date: 2019-11-21 19:22, hash: `f903835370` Worked: version: 2.81 (sub 16), branch: master, commit date: 2019-11-18 12:53, hash: `115a5bf65a` **Short description of error** After sculpt changes in 2.82, enabling size pressure in sculpt mode corrupts the mesh when sculpting. Attempting a remesh on the corrupted mesh hangs blender. **Exact steps for others to reproduce the error** Factory defaults. 1. Swap to sculpt tab 2. Remesh cube 3. Enable size pressure on clay brush 4. Sculpt with mouse, no issue. 5. Sculpt with tablet. Mesh is being destroyed. 6. Remesh again, blender hangs. See video below: [ekRyAHdTIP.mp4](https://archive.blender.org/developer/F8174562/ekRyAHdTIP.mp4)
Author

Added subscriber: @Floatharr

Added subscriber: @Floatharr
Pablo Dobarro self-assigned this 2019-11-28 13:53:19 +01:00

This issue was referenced by e77fdc62b7

This issue was referenced by e77fdc62b75a3b96e4c3ca5c2fc4025d8091ff99
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72006
No description provided.